Ajustar archivo .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -151,10 +151,13 @@ Thumbs.db #thumbnail cache on Windows
 
 ### vscode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+
+### Project ###
+util/kaffter_constants.py
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode,python
